--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "@repo/lib",
+  "name": "@repo/hooks",
   "version": "0.0.0",
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./utils": "./src/utils.ts",
-    "./hooks": "./src/hooks.ts",
-    "./brand": "./src/brand.ts"
+    "./use-toast": "./src/use-toast.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/lib": "workspace:*",
     "@repo/ui": "workspace:*",
-    "clsx": "^2.1.1",
     "next-themes": "^0.3.0",
-    "tailwind-merge": "^2.5.2"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.0",
     "typescript": "^5.3.3"
   }
 }
