--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,7 +2,10 @@
   "name": "@repo/components",
   "version": "0.0.0",
   "private": true,
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
+    ".": "./src/index.ts",
     "./brand-header": "./src/brand-header.tsx",
     "./status-badge": "./src/status-badge.tsx",
     "./availability-tags": "./src/availability-tags.tsx",
