--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -7,7 +7,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./types": "./src/types.ts",
-    "./utils": "./src/utils.ts"
+    "./utils": "./src/utils.ts",
+    "./brand": "./src/brand.ts"
   },
   "dependencies": {
     "clsx": "^2.0.0",
